# Rust-Plotting-Tool

./: .gitignore  Makefile  Notes  Notes.md  README.md  RustNotes.md  build_writer_and_strategy.sh  mock_bin_data.csv  writer_script.sh
DownsampleTesting/: AdwinMean.py  BinPlotting.py  Generated_Reward_Data.csv  WindowsOverAdwin.py  adw.py  adwAgg.py  aggregatePlot.py  chunkingMeanAdwin.py  createCSV.py  dynamicWindow.py  granularOverTime.py  liveAggregate.py  realWorldDataPlot.py  rollingVariance.py  simplePlot.py  slow_increase_with_chunks.csv  timing.py  variance_dataset.csv
DownsampleTesting/plot_data/: Generated_Reward_Data_10000.csv  LunarLander-v2_Reward.csv  RustTest.csv  data.csv  personal_dataset.csv  variance_dataset_low_100.csv
MergingGTKTest/: Cargo.toml  writer_bin_merge.sh
MergingGTKTest/src/: bin.rs  interval_data.rs  lib.rs  main.rs  main_functions.rs
NOTES/: bins.hs
PythonMocking/: data.csv
PythonMocking/AggregationTesting/: ADWIN.py  AdwinMean.py  aggregatePlot.py  chunkingMeanAdwin.py  (+3 more)
RustTesting/: RustNotes.md
RustTesting/aggregating_adaptive_window/: Cargo.toml  EdgeCaseForAgg_Adwin  column2.txt  column2_with_commas.txt  personal.csv  test.csv
RustTesting/aggregating_adaptive_window/src/: adwin.rs  adwin_aggregate.rs  aggregate_adwin.rs  main.rs
RustTesting/buffer_test/: Cargo.toml  writer_buffer_test.sh
RustTesting/buffer_test/src/: data_module.rs  main.rs
RustTesting/tokioTest/: Cargo.toml
RustTesting/tokioTest/src/: data_module.rs  main.rs
bin_merging/interval_bin_merging/: Cargo.toml  categorise_recent_bins_comparison.txt  writer_bin_merge.sh
bin_merging/interval_bin_merging/benches/: bin_merge.rs
bin_merging/interval_bin_merging/src/: aggregation_strategy.rs  bin.rs  count_aggregation.rs  count_data.rs  lib.rs  main.rs  tier.rs
buffer_test/: Cargo.toml
channel_communication/: Cargo.toml
combiningBins/: Cargo.toml
crossbeam_plotting/: Cargo.toml  notes.md
druid-test/: Cargo.toml
eguiPlot/: Cargo.toml
gtk/: Cargo.toml
gtk-window/: Cargo.toml
hello_world/: Cargo.toml
multiple_line_plot/: Cargo.toml
oil_cons/: Cargo.toml  powerconsumption_zone2.csv  powerconsumption_zone3.csv
pow_cons/: Cargo.toml  powerconsumption_zone1.csv
rustTesting/: Makefile  basic_threading.rs  mpscTest.rs  program1.rs  program2.rs  structTest.rs
sliding_window_test/: Cargo.toml
strategy_pattern/: Cargo.toml
summarst/: Cargo.toml
writer/: Cargo.toml  Generated_Reward_Data_10000.csv  dataset_100000.csv  dataset_15000.csv  dataset_500.csv  output.txt  powerconsumption_zone1.csv  random_dataset_100000.csv  tierTest.txt
(+104 files in other folders)
