[package]
name = "MergingGTKTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
eframe = "0.26.2"
egui_plot = "0.26.2"
gtk4 = "0.8.0"
nix = "0.27.1"
rayon = "1.8.1"
statrs = "0.16.0"
tokio = {version = "1.35.0", features = ["full"]}


[lib]
name = "project_library"
path = "src/lib.rs"
