[package]
name = "aggregating_adaptive_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
eframe = "0.25.0"
egui_plot = "0.25.0"
serde = {version = "1.0.193", features = ["derive"]}
statrs = "0.16.0"
