[package]
name = "buffer_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
eframe = "0.24.0"
egui_plot = "0.24.0"
statrs = "0.16.0"
tokio = {version = "1.35.0", features = ["full"]}

[dev-dependencies]
criterion = "0.5.1"
